5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1724_2528.log
== TEST (2019-05-14 11:17:59) 
-- CODE:
n= int(input("insira um numero: "))
print(n//10)
print(n//100)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:13) 
-- CODE:
n= int(input("insira um numero: "))
print(n%10)
print(n//100)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:31) 
-- CODE:
n= int(input("insira um numero: "))
print(n%10)
print(n%100)
print(n//100)
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:48) 
-- CODE:
n= int(input("insira um numero: "))
print(n%10)
print(n//10%10)
print(n//100)
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:04) 
-- CODE:
n= int(input("insira um numero: "))
print(n//100)
print(n%10)
print(n//10%10)

-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:14) 
-- CODE:
n= int(input("insira um numero: "))
print(n//100)
print(n//10%10)
print(n%10)
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:38) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:45) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:49) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:53) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:37) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a,b,c)
-- OUTPUT:
1
0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:26) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:52) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:58) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:06) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:09) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==(a+b or b+c or a+c):
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:42) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==(a or b or c):
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3
print(h)
print(a+b+c)
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:36:37) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input("insira um numero: "))
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:37:10) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input("insira um numero: "))
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:18) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input("insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:07) 
-- CODE:
n= int(input("insira um numero: "))
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
-- OUTPUT:
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:23) 
-- CODE:
while n>0:
	n= int(input( "insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    while n>0:
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:46) 
-- CODE:
while n>0:
	n= int(input( "insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    while n>0:
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:43:05) 
-- CODE:
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=(n//100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:43:13) 
-- CODE:
a=(n//100)
b=(n//10%10)
c=(n%10)
if a+b+c==a or a+b+c==b or a+b+c==c:
	h=1
elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
	h=2
else:
	h=3

while n>0:
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=(n//100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:44:17) 
-- CODE:
n= int(input( "insira um numero: "))
while n>0:
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=(n//100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:06) 
-- CODE:
n= int(input( "insira um numero: "))
while n>0:
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	print(a,b,c)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=(n//100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:47:09) 
-- CODE:
n= int(input( "insira um numero: "))
while n>0:
	a=(n//100)
	b=(n//10%10)
	c=(n%10)
	print(a,b,c)
	if a+b+c==a or a+b+c==b or a+b+c==c:
		h=1
	elif a+b+c==a+b or a+b+c==b+c or a+b+c==a+c:
		h=2
	else:
		h=3
	s=a**h+b**h+c**h
	print(s)
	if s==n:
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n= int(input( "insira um numero: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=(n//100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
